<resources>
    <string name="app_name">FunctionsJava</string>
    <string name="tv0">Touch a name</string>
    <string name="tv1">information..</string>
    <string name="description">description ImageButton</string>

    <string name="button_next">Next Activity</string>
    <string name="button_sign_in">Sign in</string>

    <string name="email">Save email</string>
    <string name="email_shared">Save email with shared preferences</string>
    <string name="password">Password</string>

    <string name="button_send">Send</string>
    <string name="text_to_send">Send text to other activity</string>
    <string name="value_received">Received</string>

    <string name="internet">Navigate</string>
    <string name="website">Enter a website</string>
    <string name="close">Close</string>

    <string name="button_save">Save</string>
    <string name="button_search">Search</string>
    <string name="contact_name">Contact name</string>
    <string name="contact_data">Contact data</string>

    <string name="name_file">File name</string>

</resources>
